<resources>
    <string name="app_name">10 Million Quiz</string>
    <string name="game_over">The game is over. Try again</string>
    <string name="win">Congratulations! You won!</string>
    <string name="try_again">Try again</string>
    <string name="bet_error">Every answer bet should be a non-negative integer. The sum of bets should be equal to the current score.</string>
    <string name="ok">OK</string>
    <string name="next_question">Submit</string>
    <string name="question">Question %1$d</string>
    <string name="play">Play</string>
    <string name="score_is">Your score is</string>
    <string name="enter_name">Enter your name to save the result in the rating</string>
    <string name="your_name">Your name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="rating">Rating</string>
</resources>